changed create_function too closure in tests

--- a/test/Helper/Navigation/_files/mvc/views/bc.phtml
+++ b/test/Helper/Navigation/_files/mvc/views/bc.phtml
@@ -1,4 +1,10 @@
 <?php
-echo implode(', ', array_map(
-        create_function('$a', 'return $a->getLabel();'),
-        $this->vars()->pages));
+echo implode(
+    ', ',
+    array_map(
+        function($a) {
+            return $a->getLabel();
+        },
+        $this->vars()->pages
+    )
+);
