--- a/test/Helper/Navigation/_files/mvc/views/bc_separator.phtml
+++ b/test/Helper/Navigation/_files/mvc/views/bc_separator.phtml
@@ -1,4 +1,10 @@
 <?php
-echo implode($this->vars()->separator, array_map(
-        create_function('$a', 'return $a->getLabel();'),
-        $this->vars()->pages));
+echo implode(
+    $this->vars()->separator,
+    array_map(
+        function($a) {
+            return $a->getLabel();
+        },
+        $this->vars()->pages
+    )
+);
