--- a/test/Helper/Navigation/_files/mvc/views/bc_with_partial_params.phtml
+++ b/test/Helper/Navigation/_files/mvc/views/bc_with_partial_params.phtml
@@ -3,7 +3,9 @@ echo $this->variable . PHP_EOL;
 echo implode(
     $this->vars()->separator,
     array_map(
-        create_function('$a', 'return $a->getLabel();'),
+        function($a) {
+            return $a->getLabel();
+        },
         $this->vars()->pages
     )
 );
